<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/gpstracker_geomodel_edit_layout_with_toolbar"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/gpstracker_geomodel_edit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/gpstracker_geomodel_edit_toolbar"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <LinearLayout
            android:id="@+id/gpstracker_geomodel_edit_id_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/row_edit_padding_vertical"
            android:paddingBottom="@dimen/row_edit_padding_vertical"
            >
            <TextView
                android:id="@+id/gpstracker_geomodel_edit_id"
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gpstracker_geomodel_edit_id"
                />
            <TextView
                android:id="@+id/gpstracker_geomodel_edit_id_value"
                android:layout_weight="1.2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/gpstracker_geomodel_edit_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_below="@id/gpstracker_geomodel_edit_id_layout"
            android:paddingTop="@dimen/row_edit_padding_vertical"
            android:paddingBottom="@dimen/row_edit_padding_vertical"
            >
            <TextView
                android:id="@+id/gpstracker_geomodel_edit_name"
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gpstracker_geomodel_edit_name"
                />
            <EditText
                android:id="@+id/gpstracker_geomodel_edit_name_value"
                android:layout_weight="1.2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/gpstracker_geomodel_edit_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_below="@id/gpstracker_geomodel_edit_name_layout"
            android:paddingTop="@dimen/row_edit_padding_vertical"
            android:paddingBottom="@dimen/row_edit_padding_vertical"
            >
            <TextView
                android:id="@+id/gpstracker_geomodel_edit_date"
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gpstracker_geomodel_edit_date"
                />
            <EditText
                android:id="@+id/gpstracker_geomodel_edit_date_value"
                android:layout_weight="1.2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/gpstracker_geomodel_edit_creator_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_below="@id/gpstracker_geomodel_edit_date_layout"
            android:paddingTop="@dimen/row_edit_padding_vertical"
            android:paddingBottom="@dimen/row_edit_padding_vertical"
            >
            <TextView
                android:id="@+id/gpstracker_geomodel_edit_creator"
                android:layout_weight="0.8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gpstracker_geomodel_edit_creator"
                />
            <EditText
                android:id="@+id/gpstracker_geomodel_edit_creator_value"
                android:layout_weight="1.2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <Button
            android:id="@+id/gpstracker_geomodel_edit_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gpstracker_geomodel_edit_creator_layout"
            android:layout_centerHorizontal="true"
            android:text="@string/save"
            android:onClick="onSaveButtonClicked"
            />
    </RelativeLayout>
</RelativeLayout>